[package]
name = "evg-api-rs"
version = "0.1.2"
authors = ["David Bradford <david.bradford@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.11.3", features = ["json", "stream", "rustls-tls"] }
parse_link_header = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
