[package]
name = "evg-api-rs"
description = "Client for accessing the Evergreen API"
version = "0.2.3"
repository = "https://github.com/dbradf/evg-api-rs"
authors = ["David Bradford <david.bradford@mongodb.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
parse_link_header = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
http = "0.2"
